<resources>
    <string name="app_name">Stocks</string>
    <string name="app_label">Stocks App</string>
    <string name="portfolio_label">PORTFOLIO</string>
    <string name="sample_networth_value">19450.26</string>
    <string name="net_worth_label">Net Worth</string>

    <string name="info">INFO</string>
    <string name="item_info_title">[Section Item Info]</string>
    <string name="pos_in_section">Position in section:</string>
    <string name="pos_in_adapter">Position in adapter:</string>
    <string name="view_type">View type:</string>
    <string name="has_header">Has header?</string>
    <string name="has_footer">Has footer?</string>
    <string name="header_pos">"Header position:</string>
    <string name="footer_pos">"Footer position:</string>
    <string name="section_info_title">[Section Info]</string>
    <string name="close">CLOSE</string>
    <string name="sample_date_value">October 28, 2020</string>
    <string name="sample_ticker">MSFT</string>
    <string name="sample_stockprice">202.68</string>
    <string name="sample_shares">8.0 shares</string>
    <string name="sample_changepercentage">10.57</string>
    <string name="favorite_label">FAVORITES</string>
    <string name="tiingo_linktext">
        &lt;a href="https://www.tiingo.com/">Powered by tiingo&lt;/a>
    </string>
    <string name="loading_message">Fetching Data</string>
    <string name="search_hint">Search Stock</string>
    <string name="search_item">Search Item</string>
    <string name="fav_item">Favorite Item</string>
    <string name="sample_detail_ticker_textview">MSFT</string>
    <string name="sample_detail_company_name_textview">Microsoft Corporation</string>
    <string name="sample_detail_stockprice_textview">$210.08</string>
    <string name="sample_detail_change_textview">-$6.15</string>
    <string name="detailscreen_portfolio_section_label">Portfolio</string>
    <string name="sample_detail_shares_owned_textview">Shares Owned: 12.0</string>
    <string name="sample_detail_marketvalue_textview">Market Value: $2520.96</string>
    <string name="detailscreen_stats_section_label">Stats</string>
    <string name="sample_detail_current_textview">Current Price: 210.08</string>
    <string name="sample_low_textview">Low: 208.1</string>
    <string name="sample_bid_textview">Bid Price: 0.0</string>
    <string name="sample_open_textview">Open Price: 213.85</string>
    <string name="sample_detail_mid_textview">Mid: 0.0</string>
    <string name="sample_detail_high_textview">High: 216.3399</string>
    <string name="sample_details_volume_textview">Volume: 36,465,546.00</string>
    <string name="detailscreen_about_section_label">About</string>
    <string name="sample_detail_about_textview">Microsoft (Nasdaq “MSFT” @microsoft) enables digital transformation for the era of an intelligent cloud and an intelligent edge. Its mission is to empower every person and every organization on the planet to achieve more.</string>
    <string name="detailscreen_trade_button">TRADE</string>
    <string name="sample_dialog_header">Trade Microsoft Corporation shares</string>
    <string name="sample_dialog_share_val">0</string>
    <string name="shares_dialog_suffix">shares</string>
    <string name="sample_share_compute_text">0 x $202.68/share = $0.0</string>
    <string name="sellbutton">SELL</string>
    <string name="buybutton">BUY</string>
    <string name="sample_share_result_text">$9313.46 available to buy MSFT</string>
    <string name="congratulations">Congratulations!</string>
    <string name="success_message">You have successfully bought 2 shares of AMZN</string>
    <string name="done">DONE</string>
    <string name="sample_about_toggle_textview">TextView</string>
    <string name="detailscreen_news_section_label">News</string>
    <string name="sample_news_source">Business Insider</string>
    <string name="sample_days_ago">2 days ago</string>
    <string name="sample_amzn_news_desc">Amazon Web Services reports $11.6 billion third-quarter revenue, up 29% year over year (AMZN)</string>
    <string name="news_item_display_image">News Item Display Image</string>
    <string name="news_image_icon">News Image Icon</string>
    <string name="twitter_share_icon">Twitter share icon</string>
    <string name="chrome_view_icon">Chrome view icon</string>
</resources>