<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/todays_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_custom_color"
        android:padding="5dp"
        android:paddingStart="10dp"
        android:text="@string/sample_date_value"
        android:textColor="@color/dateColor"
        android:textStyle="bold"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/portfolio_label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/section_header_color"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:text="@string/portfolio_label"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/todays_date_textview"
        tools:layout_editor_absoluteX="176dp" />

    <TextView
        android:id="@+id/networth_label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_custom_color"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:text="@string/net_worth_label"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/portfolio_label_textview"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/networth_value_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_custom_color"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:text="@string/sample_networth_value"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/networth_label_textview"
        tools:layout_editor_absoluteX="175dp" />

</androidx.constraintlayout.widget.ConstraintLayout>