<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_custom_color"
    android:padding="5dp">


    <ImageView
        android:id="@+id/detail_arrow_fav"
        android:layout_width="23dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24" />

    <ImageView
        android:id="@+id/change_fav"
        android:layout_width="18dp"
        android:layout_height="19dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/change_percentage_fav"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_baseline_trending_down_24" />

    <TextView
        android:id="@+id/ticker_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/sample_ticker"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stock_price_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="26dp"
        android:text="@string/sample_stockprice"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_percentage_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:text="@string/sample_changepercentage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stock_price_fav" />

    <TextView
        android:id="@+id/shares_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/sample_shares"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticker_fav" />
</androidx.constraintlayout.widget.ConstraintLayout>