<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/share_dialog_image"
        android:layout_width="420dp"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/news_image_icon" />

    <TextView
        android:id="@+id/share_dialog_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:textSize="20sp"
        android:maxLines="3"
        android:singleLine="false"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/sample_amzn_news_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_dialog_image" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_dialog_news_title"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/share_border">
            <ImageButton
                android:id="@+id/twitter_share_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="70dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/ic_twitter_logo_dialog"
                android:contentDescription="@string/twitter_share_icon"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/share_border">
            <ImageButton
                android:id="@+id/chrome_view_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_chrome"
                android:contentDescription="@string/chrome_view_icon"/>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>